mela, modulo mangia

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 </head>
 <body>
     <script src="snake.js"></script>
-    <script src="sketch.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
